force-app/main/default/objects/Hiring_Team__c/Hiring_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object used to as junction between Job Application and Contact. Used to associate multiple contacts with a Job Application.</description>
    <label>Hiring Team</label>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>Hiring Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiring Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>