force-app/main/default/objects/Hiring_Team__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Hiring Teams</relationshipLabel>
    <relationshipName>Hiring_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>