force-app/main/default/objects/Hiring_Team__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>