force-app/main/default/objects/Hiring_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>