force-app/main/default/objects/Hiring_Team__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Formula field showing the Contact&apos;s Title from the Contact record.</description>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows Title from Contact record.</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>